Internationalization , rename default user shell command and bug fixes

--- a/medication/medication.manager.ui/src/main/resources/medication-ui_de.properties
+++ b/medication/medication.manager.ui/src/main/resources/medication-ui_de.properties
@@ -5,5 +5,25 @@ medication.manager.ui.done=Fertig
 medication.manager.ui.intake.review=Aufnahmen
 medication.manager.ui.intake.inventory.status=Medizinvorräte
 medication.manager.ui.intake.dispenser.instructions=Medizinspenderanweisungen
+medication.manager.ui.main.menu=Aufnahmen 1
+medication.manager.ui.previous.week=Aufnahmen 2
+medication.manager.ui.next.week=Aufnahmen 3
+medication.manager.ui.upside.down={0}, Aufnahmen 4.
+medication.manager.ui.intake.review.log.title={0}, \n Aufnahmen 5:\n {1}
+medication.manager.ui.intake.review.log.row={0}. Aufnahmen 6:{1}, Aufnahmen 7:{2}, Aufnahmen 8:{3}, Aufnahmen 9: {4}
+medication.manager.ui.inventory.title=Aufnahmen 10: {0}
+medication.manager.ui.inventory.row= {0}.{1} Aufnahmen 11 {2} {3}
+medication.manager.ui.intake.review.log.no=Aufnahmen 12
+medication.manager.ui.inventory.no=Aufnahmen 13
+medication.manager.ui.missing.pill.dispenser=This Aufnahmen 14 ({0}) Aufnahmen 15.
+medication.manager.ui.intake.info=Aufnahmen 16
+medication.manager.ui.taken=Aufnahmen 17
+medication.manager.ui.missed=Aufnahmen 18
+medication.manager.ui.info=Aufnahmen 19
+medication.manager.ui.new.dose=Aufnahmen 20
+medication.manager.ui.reminder.message={0},\nAufnahmen 21 {1} Aufnahmen 22.
+medication.manager.ui.intake.info.for.title=Aufnahmen 23 {0}  o\''\'clock
+medication.manager.ui.intake.info.for.row={0}.{1} - {2} {3}
+medication.manager.ui.medication.info=Aufnahmen 24
 
 
