update German and English version

--- a/medication/medication.manager.ui/src/main/resources/medication-ui_de.properties
+++ b/medication/medication.manager.ui/src/main/resources/medication-ui_de.properties
@@ -1,3 +1,4 @@
+medication.manager.ui.main.menu=Medication Manager Hauptmenü
 medication.manager.ui.welcome=Willkomen zu Medication Manager Service!
 medication.manager.ui.title=Medication Manager
 medication.manager.ui.close=Schließen
@@ -5,25 +6,24 @@ medication.manager.ui.done=Fertig
 medication.manager.ui.intake.review=Aufnahmen
 medication.manager.ui.intake.inventory.status=Medizinvorräte
 medication.manager.ui.intake.dispenser.instructions=Medizinspenderanweisungen
-medication.manager.ui.main.menu=Aufnahmen 1
-medication.manager.ui.previous.week=Aufnahmen 2
-medication.manager.ui.next.week=Aufnahmen 3
-medication.manager.ui.upside.down={0}, Aufnahmen 4.
-medication.manager.ui.intake.review.log.title={0}, \n Aufnahmen 5:\n {1}
-medication.manager.ui.intake.review.log.row={0}. Aufnahmen 6:{1}, Aufnahmen 7:{2}, Aufnahmen 8:{3}, Aufnahmen 9: {4}
-medication.manager.ui.inventory.title=Aufnahmen 10: {0}
-medication.manager.ui.inventory.row= {0}.{1} Aufnahmen 11 {2} {3}
-medication.manager.ui.intake.review.log.no=Aufnahmen 12
-medication.manager.ui.inventory.no=Aufnahmen 13
-medication.manager.ui.missing.pill.dispenser=This Aufnahmen 14 ({0}) Aufnahmen 15.
-medication.manager.ui.intake.info=Aufnahmen 16
-medication.manager.ui.taken=Aufnahmen 17
-medication.manager.ui.missed=Aufnahmen 18
-medication.manager.ui.info=Aufnahmen 19
-medication.manager.ui.new.dose=Aufnahmen 20
-medication.manager.ui.reminder.message={0},\nAufnahmen 21 {1} Aufnahmen 22.
-medication.manager.ui.intake.info.for.title=Aufnahmen 23 {0}  o\''\'clock
+medication.manager.ui.previous.week=Vorige Woche
+medication.manager.ui.next.week=Nächste Woche
+medication.manager.ui.upside.down={0}, der Tablettenspender ist falsch posizioniert. Bitte, stellen Sie ihn aufrecht!
+medication.manager.ui.intake.review.log.title={0}, \n Aufnahmenübersicht für die Woche:\n {1}
+medication.manager.ui.intake.review.log.row={0}. Datum:{1}, Zeit:{2}, Medizine:{3}, Aufnahmestatus: {4}
+medication.manager.ui.inventory.title=Medizinvorräte für: {0}
+medication.manager.ui.inventory.row= {0}.{1} ferfügbar {2} {3}
+medication.manager.ui.intake.review.log.no=Es gibt keine Aufnahmen für diese Woche geplannt.
+medication.manager.ui.inventory.no=Es gibt keine Medikamente vorrätig.
+medication.manager.ui.missing.pill.dispenser=Diesem Benutzer ({0}) ist kein Tablettenspender zugewisen worden. Die Tablettenspender werden über die Configuration-Webanwendung zugewiesen.
+medication.manager.ui.intake.info=Aufnahmeinformation
+medication.manager.ui.taken=Aufgenommen
+medication.manager.ui.missed=Verpasst
+medication.manager.ui.info=Medikamenteninformation
+medication.manager.ui.new.dose=Neue Dosis
+medication.manager.ui.reminder.message={0},\nes ist Zeit {1} Ihre Medikamenten aufzunehmen.
+medication.manager.ui.intake.info.for.title=Information für die {0}-Aufnahme
 medication.manager.ui.intake.info.for.row={0}.{1} - {2} {3}
-medication.manager.ui.medication.info=Aufnahmen 24
+medication.manager.ui.medication.info=Medikamenteninformation
 
 
