few tiny fixes in the wording

--- a/medication/medication.manager.ui/src/main/resources/medication-ui_de.properties
+++ b/medication/medication.manager.ui/src/main/resources/medication-ui_de.properties
@@ -9,13 +9,13 @@ medication.manager.ui.intake.dispenser.instructions=Medizinspenderanweisungen
 medication.manager.ui.previous.week=Vorige Woche
 medication.manager.ui.next.week=Nächste Woche
 medication.manager.ui.upside.down={0}, der Tablettenspender ist falsch posizioniert. Bitte, stellen Sie ihn aufrecht!
-medication.manager.ui.intake.review.log.title={0}, \n Aufnahmenübersicht für die Woche:\n {1}
+medication.manager.ui.intake.review.log.title={0}, \n die Aufnahmenübersicht für die Woche:\n {1}
 medication.manager.ui.intake.review.log.row={0}. Datum:{1}, Zeit:{2}, Medizine:{3}, Aufnahmestatus: {4}
-medication.manager.ui.inventory.title=Medizinvorräte für: {0}
+medication.manager.ui.inventory.title=Die Medizinvorräte für {0}
 medication.manager.ui.inventory.row= {0}.{1} ferfügbar {2} {3}
 medication.manager.ui.intake.review.log.no=Es gibt keine Aufnahmen für diese Woche geplannt.
 medication.manager.ui.inventory.no=Es gibt keine Medikamente vorrätig.
-medication.manager.ui.missing.pill.dispenser=Diesem Benutzer ({0}) ist kein Tablettenspender zugewisen worden. Die Tablettenspender werden über die Configuration-Webanwendung zugewiesen.
+medication.manager.ui.missing.pill.dispenser=Diesem Benutzer ({0}) ist kein Tablettenspender zugewiesen worden. Die Tablettenspender werden über die Configuration-Webanwendung zugewiesen.
 medication.manager.ui.intake.info=Aufnahmeinformation
 medication.manager.ui.taken=Aufgenommen
 medication.manager.ui.missed=Verpasst
