moved to Version E.2.1-SNAPSHOT, automatized feature, fixed some internationalization.

--- a/health/health.ui.client/src/main/resources/messages.properties
+++ b/health/health.ui.client/src/main/resources/messages.properties
@@ -57,6 +57,10 @@ generic.remove.text=Are you sure you want to remove the treatment with name:
 generic.remove.title=Treatment Remove Confirmation
 generic.remove.yes=Yes
 
+meas.newTreatment.max=Min Value
+meas.newTreatment.min=Max Value
+meas.newTreatment.title=Measurement Requierements
+
 blood.newTreatment.max.diastolic=Max Diastolic Value
 blood.newTreatment.max.systolic=Max Systolic Value
 blood.newTreatment.min.diastolic=Min Diastolic Value
