Implemented: 1.The text from the RequestMedicationInfo dialog is moved to the Reminder dialog 2. The new users inserted via the console commands are stored in the database table and checked again that table 3. Internationalisation of the week message

--- a/medication/medication.manager.ui/src/main/resources/medication-ui_de.properties
+++ b/medication/medication.manager.ui/src/main/resources/medication-ui_de.properties
@@ -21,7 +21,7 @@ medication.manager.ui.taken=Aufgenommen
 medication.manager.ui.missed=Verpasst
 medication.manager.ui.info=Medikamenteninformation
 medication.manager.ui.new.dose=Neue Dosis
-medication.manager.ui.reminder.message={0},\nes ist Zeit {1} Ihre Medikamenten aufzunehmen.
+medication.manager.ui.reminder.message={0},\nes ist Zeit {1} Ihre Medikamenten aufzunehmen.\n\n
 medication.manager.ui.intake.info.for.title=Information für die {0}-Aufnahme
 medication.manager.ui.intake.info.for.row={0}.{1} - {2} {3}
 medication.manager.ui.medication.info=Medikamenteninformation
