more internationalization, plus some checks on helper.

--- a/health/health.ui.client/src/main/resources/messages.properties
+++ b/health/health.ui.client/src/main/resources/messages.properties
@@ -24,7 +24,7 @@ treatmentList.repeat=Treatments
 treatmentList.title=Treatment List
 
 treatmentType.back=Cancel
-treatmentType.ok=ok
+treatmentType.ok=Ok
 treatmentType.select=Select Measurement Type
 treatmentType.title=New Treatment: Which Type?
 
@@ -74,3 +74,39 @@ pulse.newTreatment.requierements=Measurement Requierements
 weight.newTreatment.max=Max HR Value
 weight.newTreatment.min=Min HR Value
 weight.newTreatment.requirements=Measurement Requierements
+
+bloodPressureMeasurement.cancel=Cancel
+bloodPressureMeasurement.diastolic=Diastolic preassure (mmHg)
+bloodPressureMeasurement.diastolic.help=Diastolic Preasure, Marked as DIA, it is the minimum preassure reading.
+bloodPressureMeasurement.diastolic.hint=70
+bloodPressureMeasurement.done=Done
+bloodPressureMeasurement.howto=How to
+bloodPressureMeasurement.systolic=Systolic preassure (mmHg)
+bloodPressureMeasurement.systolic.help=Systolic Preasure, Marked as SYS, it is the maximum preassure reading.
+bloodPressureMeasurement.systolic.hint=100
+bloodPressureMeasurement.title=Blood Preasure
+
+heartRateMeasurement.cancel=Cancel
+heartRateMeasurement.done=Done
+heartRateMeasurement.hr=HeartRate
+heartRateMeasurement.hr.help=Insert Your heart rate in beats per minute.
+heartRateMeasurement.hr.hint=90
+heartRateMeasurement.title=Heart Rate
+
+howToBloodPreasure.content.type=image/jpg
+howToBloodPreasure.content.url=health/Monitor presion.jpg
+howToBloodPreasure.text=Make sure you are relaxed and comfortable and make sure your blood presure is correctly.
+howToBloodPreasure.title=Motivation Message
+
+motivationMessage.content.type=image/png
+motivationMessage.content.url=Accept.png
+motivationMessage.text=Well done. Your pressure levels are ok
+motivationMessage.title=Motivation Message
+
+weigthMeasurement.cancel=Cancel
+weigthMeasurement.done=Done
+weigthMeasurement.input=Weight 
+weigthMeasurement.input.help=Insert Your Weight in Kg.
+weigthMeasurement.input.hint=64.5
+weigthMeasurement.title=Weight
+
