internationalization with substitutions.

--- a/health/health.ui.client/src/main/resources/messages.properties
+++ b/health/health.ui.client/src/main/resources/messages.properties
@@ -41,13 +41,13 @@ generic.newTreatmentadd=Add
 generic.newTreatmentback=Back
 generic.newTreatmentbane.hint=take weight measurement
 generic.newTreatmentdescription=Description
-generic.newTreatmentdescription.alert=Description must be a valid Aphanumeric Value
+generic.newTreatmentdescription.alert=Description must be a valid Alphanumeric Value
 generic.newTreatmentdescription.help=set a description for this treatment
 generic.newTreatmentdescription.hint=every day, in the morning climb on the scale and tell the system your weight.
 generic.newTreatmentend=End
 generic.newTreatmentgroup=Treatment Planning
 generic.newTreatmentname=Name
-generic.newTreatmentname.alert=Name must be a valid Aphanumeric Value
+generic.newTreatmentname.alert=Name must be a valid Alphanumeric Value
 generic.newTreatmentname.help=set a distinctive name for this treatment
 generic.newTreatmentstart=Start
 generic.newTreatmenttitle=New Treatment
@@ -57,38 +57,38 @@ generic.remove.text=Are you sure you want to remove the treatment with name:
 generic.remove.title=Treatment Remove Confirmation
 generic.remove.yes=Yes
 
-meas.newTreatment.max=Min Value
-meas.newTreatment.min=Max Value
-meas.newTreatment.title=Measurement Requierements
+meas.newTreatment.max=Minimum Value
+meas.newTreatment.min=Maximum Value
+meas.newTreatment.title=Measurement Requirements
 
-blood.newTreatment.max.diastolic=Max Diastolic Value
-blood.newTreatment.max.systolic=Max Systolic Value
-blood.newTreatment.min.diastolic=Min Diastolic Value
-blood.newTreatment.min.systolic=Min Systolic Value
-blood.newTreatment.requierements=Measurement Requierements
+blood.newTreatment.max.diastolic=Maximum Diastolic Value
+blood.newTreatment.max.systolic=Maximum Systolic Value
+blood.newTreatment.min.diastolic=Minimum Diastolic Value
+blood.newTreatment.min.systolic=Minimum Systolic Value
+blood.newTreatment.requierements=Measurement Requirements
 
 pulse.newTreatment.max=Max HR Value
 pulse.newTreatment.min=Min HR Value
-pulse.newTreatment.requierements=Measurement Requierements
+pulse.newTreatment.requierements=Measurement Requirements
 
 weight.newTreatment.max=Max HR Value
 weight.newTreatment.min=Min HR Value
-weight.newTreatment.requirements=Measurement Requierements
+weight.newTreatment.requirements=Measurement Requirements
 
 bloodPressureMeasurement.cancel=Cancel
-bloodPressureMeasurement.diastolic=Diastolic preassure (mmHg)
-bloodPressureMeasurement.diastolic.help=Diastolic Preasure, Marked as DIA, it is the minimum preassure reading.
+bloodPressureMeasurement.diastolic=Diastolic pressure (\{0\})
+bloodPressureMeasurement.diastolic.help=Diastolic Pressure, Marked as DIA, it is the minimum pressure reading.
 bloodPressureMeasurement.diastolic.hint=70
 bloodPressureMeasurement.done=Done
 bloodPressureMeasurement.howto=How to
-bloodPressureMeasurement.systolic=Systolic preassure (mmHg)
-bloodPressureMeasurement.systolic.help=Systolic Preasure, Marked as SYS, it is the maximum preassure reading.
+bloodPressureMeasurement.systolic=Systolic Pressure (\{0\})
+bloodPressureMeasurement.systolic.help=Systolic Pressure, Marked as SYS, it is the maximum pressure reading.
 bloodPressureMeasurement.systolic.hint=100
-bloodPressureMeasurement.title=Blood Preasure
+bloodPressureMeasurement.title=Blood Pressure
 
 heartRateMeasurement.cancel=Cancel
 heartRateMeasurement.done=Done
-heartRateMeasurement.hr=HeartRate
+heartRateMeasurement.hr=HeartRate (\{0\})
 heartRateMeasurement.hr.help=Insert Your heart rate in beats per minute.
 heartRateMeasurement.hr.hint=90
 heartRateMeasurement.title=Heart Rate
@@ -100,13 +100,13 @@ howToBloodPreasure.title=Motivation Message
 
 motivationMessage.content.type=image/png
 motivationMessage.content.url=Accept.png
-motivationMessage.text=Well done. Your pressure levels are ok
+motivationMessage.text=Well done. Your pressure levels are ok.
 motivationMessage.title=Motivation Message
 
 weigthMeasurement.cancel=Cancel
 weigthMeasurement.done=Done
 weigthMeasurement.input=Weight 
-weigthMeasurement.input.help=Insert Your Weight in Kg.
+weigthMeasurement.input.help=Insert Your Weight (\{0\}).
 weigthMeasurement.input.hint=64.5
 weigthMeasurement.title=Weight
 
