--- a/medication/medication.manager.persistence/src/main/resources/medication-persistence_de.properties
+++ b/medication/medication.manager.persistence/src/main/resources/medication-persistence_de.properties
@@ -1,1 +1,1 @@
-medication.manager.week.title=Start date: Monday {0} ; End date: Sunday {1} ; Current time: {2} {3}
+medication.manager.week.title=Anfang der Woche: Montag {0} ; Ende der Woche: Sontag {1} ; Aktuelle Zeit: {2} {3}
