fixed bug in the Medication info dialog by added message if a given medicine is missing description

--- a/medication/medication.manager.ui/src/main/resources/medication-ui_de.properties
+++ b/medication/medication.manager.ui/src/main/resources/medication-ui_de.properties
@@ -24,6 +24,7 @@ medication.manager.ui.new.dose=Neue Dosis
 medication.manager.ui.reminder.message={0},\nes ist Zeit {1} Ihre Medikamenten aufzunehmen.\n\n
 medication.manager.ui.intake.info.for.title=Information für die {0}-Aufnahme
 medication.manager.ui.intake.info.for.row={0}.{1} - {2} {3}
-medication.manager.ui.medication.info=Medikamenteninformation
+medication.manager.ui.medication.info=
+medication.manager.ui.missing.medicine.description=Missing medicine description
 
 
