Added internationalization to the inventory and reminder dialog: pills and drops

--- a/medication/medication.manager.ui/src/main/resources/medication-ui_de.properties
+++ b/medication/medication.manager.ui/src/main/resources/medication-ui_de.properties
@@ -26,5 +26,7 @@ medication.manager.ui.intake.info.for.title=Information für die {0}-Aufnahme
 medication.manager.ui.intake.info.for.row={0}.{1} - {2} {3}
 medication.manager.ui.medication.info=Medikamenteninformation
 medication.manager.ui.missing.medicine.description=Die Medikamenteninformation fehlt
+medication.manager.ui.intake.type.pills=Tabletten
+medication.manager.ui.intake.type.drops=Tropfen
 
 
