--- a/medication/medication.manager.ui/src/main/resources/medication-ui_es.properties
+++ b/medication/medication.manager.ui/src/main/resources/medication-ui_es.properties
@@ -26,3 +26,5 @@ medication.manager.ui.intake.info.for.title=Toma de las  {0}  en punto.
 medication.manager.ui.intake.info.for.row={0}.{1} - {2} {3}
 medication.manager.ui.medication.info=Información
 medication.manager.ui.missing.medicine.description=No se encuentra la descripción
+medication.manager.ui.intake.type.pills=pastillas
+medication.manager.ui.intake.type.drops=gotas
