refinement of the translated texts

--- a/medication/medication.manager.ui/src/main/resources/medication-ui_de.properties
+++ b/medication/medication.manager.ui/src/main/resources/medication-ui_de.properties
@@ -1,32 +1,32 @@
 medication.manager.ui.main.menu=Medication Manager Hauptmenü
-medication.manager.ui.welcome=Willkomen zu Medication Manager Service!
+medication.manager.ui.welcome=Willkomen zum Medication Manager Service!
 medication.manager.ui.title=Medication Manager
 medication.manager.ui.close=Schließen
 medication.manager.ui.done=Fertig
-medication.manager.ui.intake.review=Aufnahmen
-medication.manager.ui.intake.inventory.status=Medizinvorräte
-medication.manager.ui.intake.dispenser.instructions=Medizinspenderanweisungen
-medication.manager.ui.previous.week=Vorige Woche
+medication.manager.ui.intake.review=Einnahmen
+medication.manager.ui.intake.inventory.status=Arzneimitteldepot
+medication.manager.ui.intake.dispenser.instructions=Nutzungshinweise Arzneimittelspender
+medication.manager.ui.previous.week=Vorherige Woche
 medication.manager.ui.next.week=Nächste Woche
-medication.manager.ui.upside.down={0}, der Tablettenspender ist falsch posizioniert. Bitte, stellen Sie ihn aufrecht!
-medication.manager.ui.intake.review.log.title={0}, \n die Aufnahmenübersicht für die Woche:\n {1}
-medication.manager.ui.intake.review.log.row={0}. Datum:{1}, Zeit:{2}, Medizine:{3}, Aufnahmestatus: {4}
-medication.manager.ui.inventory.title=Die Medizinvorräte für {0}
-medication.manager.ui.inventory.row= {0}.{1} ferfügbar {2} {3}
-medication.manager.ui.intake.review.log.no=Es gibt keine Aufnahmen für diese Woche geplannt.
-medication.manager.ui.inventory.no=Es gibt keine Medikamente vorrätig.
-medication.manager.ui.missing.pill.dispenser=Diesem Benutzer ({0}) ist kein Tablettenspender zugewiesen worden. Die Tablettenspender werden über die Configuration-Webanwendung zugewiesen.
-medication.manager.ui.intake.info=Aufnahmeinformation
-medication.manager.ui.taken=Aufgenommen
-medication.manager.ui.missed=Verpasst
-medication.manager.ui.info=Medikamenteninformation
+medication.manager.ui.upside.down={0}, der Arzneimittelspender ist falsch posizioniert. Bitte, stellen Sie ihn aufrecht!
+medication.manager.ui.intake.review.log.title={0}, \n die Wochenübersicht der Einnahmen für die Woche:\n {1} 
+medication.manager.ui.intake.review.log.row={0}. Termin: {1}, {2} Uhr - {3} - {4}
+medication.manager.ui.inventory.title=Die vorhandenen Arzneimittel für {0}
+medication.manager.ui.inventory.row= {0}. {1}: {2} {3} verfügbar
+medication.manager.ui.intake.review.log.no=Es sind keine Einnahmen für diese Woche geplant.
+medication.manager.ui.inventory.no=Es gibt keine Arzneimittel vorrätig. Bitte, besorgen Sie die vorgeschriebene Arzneimittel und tragen Sie sie über die Acquire-Webanwendung ins Arzneimitteldepot ein.
+medication.manager.ui.missing.pill.dispenser=Diesem Benutzer ({0}) ist keinen Arzneimittelspender zugewiesen worden. Die Arzneimittelspender werden über die Configuration-Webanwendung zugewiesen.
+medication.manager.ui.intake.info=Einnahmeinformation
+medication.manager.ui.taken=Einnahme erfolgt
+medication.manager.ui.missed=Einnahme verpasst
+medication.manager.ui.info=Arzneimittelinformation
 medication.manager.ui.new.dose=Neue Dosis
-medication.manager.ui.reminder.message={0},\nes ist Zeit {1} Ihre Medikamenten aufzunehmen.\n\n
-medication.manager.ui.intake.info.for.title=Information für die {0}-Aufnahme
-medication.manager.ui.intake.info.for.row={0}.{1} - {2} {3}
-medication.manager.ui.medication.info=Medikamenteninformation
-medication.manager.ui.missing.medicine.description=Die Medikamenteninformation fehlt
-medication.manager.ui.intake.type.pills=Tabletten
-medication.manager.ui.intake.type.drops=Tropfen
+medication.manager.ui.reminder.message={0},\nes ist Zeit {1} Deine Arzneimittel einzunehmen.\n\n
+medication.manager.ui.intake.info.for.title=Information für die {0} Uhr  Einnahme
+medication.manager.ui.intake.info.for.row={0}. {1} - {2} {3}
+medication.manager.ui.medication.info=Arzneimittelinformation
+medication.manager.ui.missing.medicine.description=Die Arzneimittelinformation fehlt
+medication.manager.ui.intake.type.pills=Tablette(n)
+medication.manager.ui.intake.type.drops=Tropf(en)
 
 
