--- a/medication/medication.manager.persistence/src/main/resources/medication-persistence_de.properties
+++ b/medication/medication.manager.persistence/src/main/resources/medication-persistence_de.properties
@@ -1,4 +1,4 @@
-medication.manager.week.title=Anfang der Woche: Montag {0} ; Ende der Woche: Sonntag {1} ; Aktuelle Zeit: {2} {3}
-medication.manager.intake.review.taken=aufgenommen
-medication.manager.intake.review.missed=verpasst
-medication.manager.intake.review.coming=fällig
+medication.manager.week.title=Wochenstart: Montag {0}; Wochenende: Sonntag {1}; Aktuelle Zeit: {2}, {3} Uhr \n
+medication.manager.intake.review.taken=Arznei eingenommen
+medication.manager.intake.review.missed=Einnahme verpasst
+medication.manager.intake.review.coming=Einnahme fällig
