--- a/medication/medication.manager.ui/src/main/resources/medication-ui_de.properties
+++ b/medication/medication.manager.ui/src/main/resources/medication-ui_de.properties
@@ -22,11 +22,16 @@ medication.manager.ui.missed=Einnahme verpasst
 medication.manager.ui.info=Arzneimittelinformation
 medication.manager.ui.new.dose=Neue Dosis
 medication.manager.ui.reminder.message={0},\nes ist Zeit {1} Deine Arzneimittel einzunehmen.\n\n
-medication.manager.ui.intake.info.for.title=Information für die {0} Uhr  Einnahme
+medication.manager.ui.intake.info.for.title=Information für die {0} Uhr Einnahme
 medication.manager.ui.intake.info.for.row={0}. {1} - {2} {3}
 medication.manager.ui.medication.info=Arzneimittelinformation
 medication.manager.ui.missing.medicine.description=Die Arzneimittelinformation fehlt
 medication.manager.ui.intake.type.pills=Tablette(n)
 medication.manager.ui.intake.type.drops=Tropf(en)
+medication.manager.ui.missing.medicine.sideeffects=Nebenwirkungen
+medication.manager.ui.missing.medicine.incompliances=Gegenanzeigen
+medication.manager.ui.medicine.description=Beschreibung
+medication.manager.ui.medicine.sideeffects=Nebenwirkungen
+medication.manager.ui.medicine.incompliances=Gegenanzeigen
 
 
