--- a/medication/medication.manager.ui/src/main/resources/medication-ui_es.properties
+++ b/medication/medication.manager.ui/src/main/resources/medication-ui_es.properties
@@ -28,3 +28,8 @@ medication.manager.ui.medication.info=Información
 medication.manager.ui.missing.medicine.description=No se encuentra la descripción
 medication.manager.ui.intake.type.pills=pastillas
 medication.manager.ui.intake.type.drops=gotas
+medication.manager.ui.missing.medicine.sideeffects=Missing medicine side effects
+medication.manager.ui.missing.medicine.incompliances=Missing medicine side incompliances
+medication.manager.ui.medicine.description=Description
+medication.manager.ui.medicine.sideeffects=Side effects
+medication.manager.ui.medicine.incompliances=Incompliances
