New lines in SPanish

--- a/medication/medication.manager.ui/src/main/resources/medication-ui_es.properties
+++ b/medication/medication.manager.ui/src/main/resources/medication-ui_es.properties
@@ -1,4 +1,4 @@
-medication.manager.ui.main.menu=Menú del control de Medicación
+6/nov./2013 16:07medication.manager.ui.main.menu=Menú del control de Medicación
 medication.manager.ui.welcome=Bienvenido al servicio de control de Medicación
 medication.manager.ui.title=Control de Medicación
 medication.manager.ui.close=Cerrar
@@ -28,8 +28,8 @@ medication.manager.ui.medication.info=Información
 medication.manager.ui.missing.medicine.description=No se encuentra la descripción
 medication.manager.ui.intake.type.pills=pastillas
 medication.manager.ui.intake.type.drops=gotas
-medication.manager.ui.missing.medicine.sideeffects=Missing medicine side effects
-medication.manager.ui.missing.medicine.incompliances=Missing medicine side incompliances
-medication.manager.ui.medicine.description=Description
-medication.manager.ui.medicine.sideeffects=Side effects
-medication.manager.ui.medicine.incompliances=Incompliances
+medication.manager.ui.missing.medicine.sideeffects=No se encuentran efectos secundarios
+medication.manager.ui.missing.medicine.incompliances=No se encuentran incompatibilidades
+medication.manager.ui.medicine.description=Descripción
+medication.manager.ui.medicine.sideeffects=Efectos secundarios
+medication.manager.ui.medicine.incompliances=Incompatibilidades
