removed unused println, buttons without functionality and fixed a minor problem with internationalization. In the menu screen appeared breakfast, lunch and dinner, independently of the Locale.language. It has been fixed.

--- a/nutritional/nutritional.client/src/main/resources/org/universAAL/AALapplication/nutritional/dialogs/messages.properties
+++ b/nutritional/nutritional.client/src/main/resources/org/universAAL/AALapplication/nutritional/dialogs/messages.properties
@@ -29,6 +29,9 @@ UIMenus.11=Tips
 UIMenus.12=Go back\!
 UIMenus.13=Nutritional Advisor
 UIMenus.14=Feature not available yet
+UIMenus.15=Breakfast
+UIMenus.16=Lunch
+UIMenus.17=Dinner
 UIMenus.2=Tomorrow
 UIMenus.3=Dish
 UIMenus.4=Image
@@ -67,9 +70,9 @@ UIRecipes.7=Week
 UIRecipes.8=Go back\!
 UIRecipes.9=Nutritional Advisor
 UIShopping.0=My shopping list
-UIShopping.1=Mi lista de la compra:
-UIShopping.2=Recetitas buenas:
-UIShopping.3=Comprar y comprar\\!
+UIShopping.1=My shopping lista:
+UIShopping.2=Recipes:
+UIShopping.3=Do shopping\\!
 UIShopping.4=Go back\\!
 UIShopping.5=Nutritional Advisor
 UIShopping.6=Feature not available yet
@@ -85,7 +88,7 @@ UIProfile.5=None
 UIProfile.6=Incompliance:
 UIProfile.7=My profile
 UIProfile.8=Questionnaires
-UIProfile.9=Go back\!
+UIProfile.9=Back\!
 UIProfile.14=Nutritional Habits
 UIProfile.15=Get up time
 UIProfile.16=Breakfast time
