--- a/nutritional/nutritional.client/src/main/resources/org/universAAL/AALapplication/nutritional/dialogs/messages_en.properties
+++ b/nutritional/nutritional.client/src/main/resources/org/universAAL/AALapplication/nutritional/dialogs/messages_en.properties
@@ -29,6 +29,9 @@ UIMenus.11=Tips
 UIMenus.12=Go back\!
 UIMenus.13=Nutritional Advisor
 UIMenus.14=Feature not available yet
+UIMenus.15=Breakfast
+UIMenus.16=Lunch
+UIMenus.17=Dinner
 UIMenus.2=Tomorrow
 UIMenus.3=Dish
 UIMenus.4=Image
