--- a/nutritional/nutritional.client/src/main/resources/org/universAAL/AALapplication/nutritional/dialogs/messages_es.properties
+++ b/nutritional/nutritional.client/src/main/resources/org/universAAL/AALapplication/nutritional/dialogs/messages_es.properties
@@ -29,6 +29,9 @@ UIMenus.11=Consejos
 UIMenus.12=Atrás
 UIMenus.13=Nutritional Advisor
 UIMenus.14=Función no disponible todavía
+UIMenus.15=Desayuno
+UIMenus.16=Comida
+UIMenus.17=Cena
 UIMenus.2=Mañana
 UIMenus.3=Plato
 UIMenus.4=Imagen
