--- a/nutritional/nutritional.client/src/main/resources/org/universAAL/AALapplication/nutritional/dialogs/messages_es.properties
+++ b/nutritional/nutritional.client/src/main/resources/org/universAAL/AALapplication/nutritional/dialogs/messages_es.properties
@@ -110,6 +110,8 @@ UIProfile.31=Guardar cambios
 UIProfile.32=Alimentos descartados
 UIProfile.33=Recetas favoritas
 UIProfile.34=Interacción medicamentos
+UIProfile.35=Cargando...
+UIProfile.36=Cargando perfil nutricional
 UIItemList.0=Alimentos descartados
 UIItemList.1=Recetas favoritas
 UIItemList.2=Atrás
