--- a/nutritional/nutritional.client/src/main/resources/org/universAAL/AALapplication/nutritional/dialogs/messages_en.properties
+++ b/nutritional/nutritional.client/src/main/resources/org/universAAL/AALapplication/nutritional/dialogs/messages_en.properties
@@ -110,6 +110,8 @@ UIProfile.31=Save changes
 UIProfile.32=Food dislikes
 UIProfile.33=Favourite recipes
 UIProfile.34=Medication interactions
+UIProfile.35=Loading...
+UIProfile.36=Loading the nutritional profile
 UIItemList.0=Food dislikes
 UIItemList.1=Favourite recipes
 UIItemList.2=Back
