removed more unused buttons (without functionality)

--- a/nutritional/nutritional.client/src/main/resources/org/universAAL/AALapplication/nutritional/dialogs/messages_es.properties
+++ b/nutritional/nutritional.client/src/main/resources/org/universAAL/AALapplication/nutritional/dialogs/messages_es.properties
@@ -89,7 +89,7 @@ UIProfile.6=Contraindicaciones:
 UIProfile.7=Mi perfil
 UIProfile.8=Cuestionarios
 UIProfile.9=Atrás
-UIProfile.14=Hábitos nutritcionales
+UIProfile.14=Hábitos nutricionales
 UIProfile.15=Hora de levantarse
 UIProfile.16=Hora de desayunar
 UIProfile.17=Hora de almorzar
