fixed minor typos

--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/components/messages_es.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/components/messages_es.properties
@@ -1,6 +1,6 @@
 DatePanel.date=fecha
-DatePanel.Day=día
-DatePanel.EndDate=Fecha de finalización
+DatePanel.Day=dia
+DatePanel.EndDate=Fecha de finalizacion
 DatePanel.Hour=hora
 DatePanel.Mins=minutos
 DatePanel.Month=mes
@@ -26,4 +26,4 @@ ReminderScreen.Message=Mensaje
 ReminderScreen.Misc=Periodicidad
 ReminderScreen.ReminderDate=Fecha del recordatorio
 ReminderScreen.ReminderType=Tipo del recordatorio
-ReminderScreen.RepeatsTimes=repetición (veces)
+ReminderScreen.RepeatsTimes=repeticion (veces)
