--- a/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_es.properties
+++ b/agenda/agenda.gui/src/main/resources/org/universAAL/agenda/gui/messages_es.properties
@@ -1,4 +1,4 @@
-JCalendar.EventsStored=Evento(s) guardados:
+JCalendar.EventsStored=Evento(s) guardado(s):
 JCalendar.Breadcrumb.Home=Inicio
 JCalendar.Fri=Vie
 JCalendar.Mon=Lun
@@ -48,7 +48,7 @@ JEventList.Hour=Hora
 JEventList.NoEventIsStoredForThisDate=No hay eventos guardados para esta fecha
 JEventList.NoScheduledAppointment=No hay ninguna cita programada
 JEventList.Place=Lugar
-JEventList.ScheduleAppointment=programar cita 
+JEventList.ScheduleAppointment=programar una cita 
 JEventList.ScheduledAppointment=cita programada
 JEventList.ScheduledAppointments=citas programadas
 JEventList.SearchResults=Resultados
